[package]
name = "agapenor"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
screenshots = "0.5.3"
reqwest = {version = "0.11.16", features = ["multipart"]}
tokio = {version = "1.27.0", features = ["full"]}
public-ip = "0.2.2"
gethostname = "0.4.2"
